--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 
     "react-dom": "^18.3.1",
 
+    "react-icons": "^5.3.0",
+
     "react-kakao-maps-sdk": "^1.1.27",
 
     "react-router-dom": "^6.26.2",
