--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 
   "dependencies": {
 
+    "@tanstack/react-query": "^5.59.16",
+
     "@testing-library/jest-dom": "^5.17.0",
 
     "@testing-library/react": "^13.4.0",
@@ -27,6 +29,8 @@
     "react-dom": "^18.3.1",
 
     "react-icons": "^5.3.0",
+
+    "react-intersection-observer": "^9.13.1",
 
     "react-kakao-maps-sdk": "^1.1.27",
 
