--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 
   "dependencies": {
 
+    "@tanstack/react-query": "^5.59.16",
+
     "@testing-library/jest-dom": "^5.17.0",
 
     "@testing-library/react": "^13.4.0",
